Fixed uneven spacing for Team Card Labels

--- a/src/styles/Less/components/AdminLeaderboard.less
+++ b/src/styles/Less/components/AdminLeaderboard.less
@@ -21,7 +21,7 @@
     padding: 20px;
 
     .team-card-labels-teams{
-      flex: 1.25 1 auto;
+      flex: 1 1 100%;
       font-family: "gopher", sans-serif;
       font-size: 35px;
       font-weight: 500;
@@ -29,7 +29,7 @@
       width: unset;
     }
     .team-card-labels-points{
-      flex: 1 1 auto;
+      flex: 1 1 100%;
       font-family: "gopher", sans-serif;
       font-size: 35px;
       font-weight: 500;
@@ -38,7 +38,7 @@
       text-align: center;
     }
     div{
-      flex: 1 1 auto;
+      flex: 1 1 100%;
       display: flex;
       justify-content: flex-end;
     }
